--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,7 @@ body {
 /* Update the styles for the navigation bar */
 .navbar {
     margin-bottom: 0; /* Remove the default margin */
+    height: 50px;
 }
 
 .landing {
@@ -50,14 +51,16 @@ footer {
 }
 
 /* Add custom styles for links */
-.navbar-dark .navbar-nav .nav-link {
+.navbar-dark .navbar-nav .nav-link,
+.navbar-brand {
     color: #fff;
     text-decoration: none;
     padding: 1em;
+    font-family: 'Montserrat', sans-serif; /* Add the font-family property */
 }
 
 .navbar-dark .navbar-nav .nav-link:hover {
-    background-color: #555;
+    background-color: #ffc20a;
 }
 
 /* Add custom styles for the fixed-top navigation bar */
@@ -140,11 +143,63 @@ footer {
         max-width: 50%; /* Further reduce the size on larger screens if needed */
     }
 }
-In this code, I've added the class logo-small to the logo image, and I've created CSS rules to control its size. The max-width property reduces the logo's width to 70% of the container's width, and the height: auto property maintains the aspect ratio of the logo.
 
-Feel free to adjust the values of the max-width property in the .logo-small class to achieve the desired size reduction. Additionally, the media query at min-width: 768px provides further control over the logo's size on larger screens. You can modify these values as needed for your design preferences.
+.bg-gray {
+    background-color: #f0f0f0; /* Replace this with your desired gray color */
+}
 
+.about-image {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
 
+@media (min-width: 768px) {
+    .about-image {
+        max-width: 80%; /* Adjust the width as needed */
+    }
+}
 
+.project-item {
+    margin-bottom: 2em;
+}
 
+.project-item a {
+    position: relative;
+    display: block;
+}
 
+.project-item img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease;
+}
+
+.project-item:hover img {
+    transform: scale(1.05);
+}
+
+.project-info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 194, 10, 0.8);
+    color: #fff;
+    padding: 1em;
+    border-radius: 8px;
+    opacity: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 0.3s ease;
+}
+
+.project-item:hover .project-info {
+    opacity: 1;
+}
