--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@ body {
 /* Update the styles for the navigation bar */
 .navbar {
     margin-bottom: 0; /* Remove the default margin */
-    height: 50px;
+    height: 70px;
 }
 
 .landing {
@@ -214,8 +214,8 @@ footer {
 .circle-item {
     text-align: center;
     width: calc(20% - 20px); /* Each circle occupies around 20% width with some spacing */
-    height: 200px; /* Fixed height for consistency */
-    padding: 20px;
+    height: 150px; /* Fixed height for consistency */
+    padding: 10px;
     border-radius: 8px; /* Not circular to provide cleaner visuals */
     background-color: #fff;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
@@ -290,4 +290,17 @@ footer {
     background-color: #ffc20a; /* Change background color on hover */
     color: #333; /* Change text color on hover */
     text-decoration: none; /* Remove underline on hover */
+}
+
+@media (max-width: 767px) {
+    /* Adjust the layout of the circle-item text on smaller screens */
+    .circle-item p {
+        font-size: 0.9em; /* Reduce the font size */
+        margin: 0; /* Remove margin to maximize space */
+    }
+
+    /* Adjust the circle-item width to make space for larger images */
+    .circle-item {
+        width: calc(50% - 20px); /* Each circle occupies around 50% width with some spacing */
+    }
 }
