--- a/styles/styles.css
+++ b/styles/styles.css
@@ -151,16 +151,16 @@ footer {
 }
 
 .about-image {
-    max-width: 100%;
+    
+    margin: 100px;
+    width: 60%;
     height: auto;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
-@media (min-width: 768px) {
-    .about-image {
-        max-width: 80%; /* Adjust the width as needed */
-    }
+.col-md-6 {
+    padding: 1px; /* Set your desired padding value */
 }
 
 .project-item {
