--- a/styles/styles.css
+++ b/styles/styles.css
@@ -130,6 +130,10 @@ footer {
         width: 50px;
         height: 50px;
     }
+    .about-image {
+        width: 100%; /* Set the width to 100% for smaller screens */
+        margin: 20px 0; /* Adjust margin as needed for spacing */
+    }
 }
 
 .logo-small {
@@ -153,14 +157,21 @@ footer {
 .about-image {
     
     margin: 100px;
-    width: 60%;
+    width: 70%;
     height: auto;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
+@media (max-width: 768px) {
+    .about-image {
+        width: 100%;
+        margin: 20px 0;
+    }
+}
+
 .col-md-6 {
-    padding: 1px; /* Set your desired padding value */
+    padding: 10px; /* Set your desired padding value */
 }
 
 .project-item {
