--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,35 @@ body {
     height: 60px;
 }
 
+/* Additional Responsive Styles */
+@media (min-width: 768px) {
+    .landing-container {
+        padding: 15vh 0; /* Increase vertical padding for larger screens */
+    }
+
+    .landing h1 {
+        font-size: 3.5em;
+    }
+
+    .landing p {
+        font-size: 1.5em;
+    }
+
+    .social-buttons a {
+        font-size: 1.5em;
+        width: 50px;
+        height: 50px;
+    }
+    .about-image {
+        width: 100%; /* Set the width to 100% for smaller screens */
+        margin: 20px 0; /* Adjust margin as needed for spacing */
+    }
+
+    .navbar {
+        width: 100%;
+    }
+}
+
 .landing {
     background-color: rgba(0, 0, 0, 0.5); /* Add a semi-transparent black background */
     text-align: center;
@@ -109,31 +138,6 @@ footer {
     justify-content: center;
     align-items: center;
     height: 100%;
-}
-
-/* Additional Responsive Styles */
-@media (min-width: 768px) {
-    .landing-container {
-        padding: 15vh 0; /* Increase vertical padding for larger screens */
-    }
-
-    .landing h1 {
-        font-size: 3.5em;
-    }
-
-    .landing p {
-        font-size: 1.5em;
-    }
-
-    .social-buttons a {
-        font-size: 1.5em;
-        width: 50px;
-        height: 50px;
-    }
-    .about-image {
-        width: 100%; /* Set the width to 100% for smaller screens */
-        margin: 20px 0; /* Adjust margin as needed for spacing */
-    }
 }
 
 .logo-small {
