--- a/styles/styles.css
+++ b/styles/styles.css
@@ -87,11 +87,14 @@ footer {
     text-decoration: none;
     padding: 1em;
     margin-right: 100px;
-    font-family: 'Montserrat', sans-serif; /* Add the font-family property */
+    font-family: 'Montserrat', sans-serif; 
+    background-color: #212529;
+    height: 100%
 }
 
 .navbar-dark .navbar-nav .nav-link:hover {
     background-color: #ffc20a;
+    height: 100%
 }
 
 /* Add custom styles for the fixed-top navigation bar */
