--- a/styles/styles.css
+++ b/styles/styles.css
@@ -182,11 +182,15 @@ footer {
 }
 
 .project-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
     margin-bottom: 2em;
+    position: relative;
 }
 
 .project-item a {
-    position: relative;
     display: block;
 }
 
@@ -207,7 +211,6 @@ footer {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
     background-color: rgba(86, 86, 86, 0.8);
     color: #fff;
     padding: 1em;
@@ -235,8 +238,8 @@ footer {
     text-align: center;
     width: calc(20% - 20px); /* Each circle occupies around 20% width with some spacing */
     height: 150px; /* Fixed height for consistency */
-    padding: 10px;
-    border-radius: 8px; /* Not circular to provide cleaner visuals */
+    padding: 20px;
+    border-radius: 50px; /* Not circular to provide cleaner visuals */
     background-color: #fff;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease;
